tests/rt/pos/core/fib2_10.atto
let fun fib 0 = 1
      | fib 1 = 1
      | fib 2 = 1
      | fib x = fib (x - 1) + fib (x - 2)
in fib 10
end
