tests/rt/neg/core/fib-untyped.atto
let fun fib x =
      if x > 2
      then fib (x - 1) + () 
      else 1
in fib 10

end
